# gitblame

./: .gitignore  INSTALL.md  README.md  install.sh
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: ai.rs  config.rs  email.rs  env_config.rs  error.rs  git.rs  main.rs
cli/src/commands/: blame.rs  forgive.rs  git_git.rs  gud.rs  mod.rs  therapy.rs  we_need_to_talk.rs
cli/tests/: integration.rs
paper/: main.tex  sigtbd.cls
website/: index.html  script.js  style.css
