[package]
name = "gitblame"
version = "0.1.0"
edition = "2024"
description = "git-blame-2.0: From Passive-Aggressive Forensics to Active-Aggressive Email Automation"
license = "MIT"

[[bin]]
name = "git"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname", "pool"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
toml = "0.8"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.15"
